[package]
name = "kustos"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database", package = "k3k-database" }

## Database migration
barrel = { version = "0.7", features = ["pg"] }

### Error handling
thiserror = "1.0"
anyhow = "1.0.48"
http = "0.2.5"

### Database ORM
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
    "chrono",
] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }

### Logging utilities
log = { version = "0.4", features = ["serde"] }
tracing = { version = "0.1" }
tracing-futures = "0.2"

### QoL
itertools = "0.10"
futures = "0.3"
async-trait = "0.1"

tokio = { version = "1" }
parking_lot = "0.12"

### TODO(r.floren) add this as a default feature
actix-web = { version = "4" }

### Opentelementry metrics
opentelemetry = { version = "0.17", default-features = false, features = [
    "metrics",
] }

[dependencies.casbin]
git = "https://github.com/kbalt/casbin-rs.git"
rev = "76b07db60264138b3f10b52469b74e41629e3e15"
default-features = false
features = ["runtime-tokio", "incremental"]

[dev-dependencies]
serial_test = "0.7"
anyhow = "1.0"
# TODO(r.floren) remove this in the future. Currently used to migrate in tests. Find something lighter.
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
url = "2"
tokio = { version = "1", features = ["rt", "macros"] }
