# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "lapin-pool"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
lapin = { version = "2", default-features = false }
anyhow = "1.0"
tokio = { version = "1" }
tokio-reactor-trait = "1"
tokio-executor-trait = "2"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.3"
