[package]
name = "k3k-legal-vote"
version = "0.1.0"
edition = "2018"

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.5"
diesel = { version = "1.4.6", features = [
    "postgres",
    "uuid",
    "uuidv07",
    "r2d2",
    "serde_json",
] }
actix-rt = "2.2"
