[package]
name = "k3k-legal-vote"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
database = { path = "../database", package = "k3k-database" }
kustos = { path = "../kustos" }
either = "1.8"
genpdf = "0.2"
itertools = "0.10"
rand = "0.8.5"
redis = "0.21"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.3"
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.7"
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
] }
actix-rt = "2.2"
serde_json = "1.0.89"
