[package]
name = "k3k-legal-vote"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
database = { path = "../database", package = "k3k-database" }
serde = { version = "1", features = ["derive"] }
validator = { version = "0.15", features = ["derive"] }
kustos = { path = "../kustos" }
either = "1.8"

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.7"
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
] }
actix-rt = "2.2"
