# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-mail-worker-protocol"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.156", features = ["derive"] }
uuid = { version = "1.3.0", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
db-storage = { path = "../db-storage", package = "k3k-db-storage", optional = true }
keycloak-admin = { path = "../keycloak-admin", optional = true }
types = { path = "../types", package = "k3k-types" }

[dev-dependencies]
serde_json = "1.0"
pretty_assertions = "1.3"

[features]
default = []
client = ["db-storage", "keycloak-admin"]
