# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
default-run = "k3k-controller"
name = "k3k-controller"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
controller = { path = "../../crates/controller", package = "k3k-controller-core" }
community-modules = { path = "../../crates/community-modules", package = "k3k-community-modules" }
kustos = { path = "../../crates/kustos" }
anyhow = "1.0"
actix-web = { version = "4", default-features = false }
