[package]
name = "k3k-polls"
version = "1.0.0-rc.1"
edition = "2021"
publish = false
authors = ["OpenTalk Team <we@opentalk.eu>"]

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
serial_test = "0.6"
actix-rt = "2.2"
