[package]
name = "k3k-polls"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
redis = "0.21"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
pretty_assertions = "1.3"
serial_test = "0.7"
actix-rt = "2.2"
