# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-polls"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
redis = "0.21"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util", features = ["controller"] }
pretty_assertions = "1.3"
serial_test = "0.7"
actix-rt = "2.2"
