[package]
name = "k3k-protocol"
version = "1.0.0-rc.5"
edition = "2018"
publish = false
authors = ["OpenTalk Team <we@opentalk.eu>"]

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
etherpad-client = { path = "../etherpad-client", package = "etherpad-client" }
controller = { path = "../controller", package = "k3k-controller-core" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util" }
