[package]
name = "k3k-protocol"
version = "1.0.0-rc.10"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
etherpad-client = { path = "../etherpad-client", package = "etherpad-client" }
controller = { path = "../controller", package = "k3k-controller-core" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
pretty_assertions = "1.3"
test-util = { path = "../test-util", package = "k3k-test-util" }
