# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-protocol"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
version.workspace = true
publish = false

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
etherpad-client = { path = "../etherpad-client", package = "etherpad-client" }
controller = { path = "../controller", package = "k3k-controller-core" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
serde = { version = "1", features = ["derive"] }
redis = "0.22"
redis-args = { path = "../redis-args", package = "k3k-redis-args" }

[dev-dependencies]
test-util = { path = "../test-util", package = "k3k-test-util", features = ["database"] }
pretty_assertions = "1.3"
