[package]
name = "r3dlock"
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
redis = { version = "0.21", features = ["tokio-comp"] }
tokio = { version = "1", features = ["time"] }

rand = "0.8"
thiserror = "1.0.25"
displaydoc = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.3"
tokio = { version = "1", features = ["macros", "test-util"] }
