# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "r3dlock"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
redis = { version = "0.22", features = ["tokio-comp"] }
tokio = { version = "1", features = ["time"] }

rand = "0.8"
thiserror = "1.0.39"
displaydoc = "0.2.3"

[dev-dependencies]
pretty_assertions = "1.3"
tokio = { version = "1", features = ["macros", "test-util"] }
