[package]
name = "k3k-redis-args"
version = "1.0.0-rc.10"
edition = "2021"
publish = false
authors = ["OpenTalk Team <mail@opentalk.eu>"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = "1.0.49"

[dev-dependencies]
redis = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
