# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-redis-args"
edition = "2021"
authors.workspace = true
version.workspace = true
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["extra-traits"] }
proc-macro2 = "1.0.49"

[dev-dependencies]
redis = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
