[package]
name = "k3k-room-provisioner"
version = "0.1.0"
authors = [ "Florian Fromm <f.fromm@heinlein-video.de>" ]
edition = "2018"

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
database ={ path = "../database", package = "k3k-database" }
db-storage ={ path = "../db-storage", package = "k3k-db-storage" }
tokio = { version = "1.12.0" }
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = { version = "0.8.21" }
anyhow = { version = "1.0.44" }
uuid = { version = "0.8.2", features = ["serde", "v4"] }
