[package]
name = "k3k-spacedeck"
version = "1.0.0-rc.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
controller = { path = "../controller", package = "k3k-controller-core" }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "cookies",
    "rustls-tls",
] }
serde = { version = "1", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1"
anyhow = "1.0"
tokio = { version = " 1", features = ["time"] }
chrono = "0.4"
percent-encoding = "2.1"
url = "2.2"
bytes = "1.1"

[dev-dependencies]
actix-rt = "2.2"
rand = "0.8"