[package]
name = "k3k-test-util"
version = "0.1.0"
edition = "2018"

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }

diesel = { version = "1.4.6", features = [
    "postgres",
    "uuid",
    "uuidv07",
    "r2d2",
    "serde_json",
] }
fern = "0.6"
