[package]
name = "k3k-test-util"
version = "1.0.0-rc.8"
edition = "2018"
publish = false

[dependencies]
controller = { path = "../controller", package = "k3k-controller-core" }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared" }

serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

kustos = { path = "../kustos", package = "kustos" }
database = { path = "../database", package = "k3k-database" }
db-storage = { path = "../db-storage", package = "k3k-db-storage" }
tokio = { version = "1" }
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
] }
fern = "0.6"
