# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "k3k-test-util"
version = "0.1.0-rc.1"
edition = "2021"
license = "EUPL-1.2"
authors.workspace = true
publish = false

[dependencies]
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio = { version = "1" }
diesel = { version = "2", features = [
    "postgres",
    "uuid",
    "r2d2",
    "serde_json",
] }
fern = "0.6"
pretty_assertions = "1.3"

controller = { path = "../controller", package = "k3k-controller-core", optional = true }
controller-shared = { path = "../controller-shared-types", package = "k3k-controller-shared", optional = true }
kustos = { path = "../kustos", package = "kustos", optional = true }
database = { path = "../database", package = "k3k-database", optional = true }
db-storage = { path = "../db-storage", package = "k3k-db-storage", optional = true }

[features]
controller = ["database", "dep:controller", "dep:controller-shared", "dep:kustos"]
database = ["dep:database", "dep:db-storage"]

